[metadata]
name = pyproject-metadata
version = 0.7.1
description = PEP 621 metadata parsing
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@riseup.net
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    homepage = https://github.com/FFY00/python-pyproject-metadata
    changelog = https://pyproject-metadata.readthedocs.io/en/stable/changelog.html

[options]
packages = find:
include_package_data = True
install_requires =
    packaging>=19.0
python_requires = >=3.7

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    pytest>=6.2.4
    pytest-cov>=2
    tomli>=1.0.0;python_version<"3.11"
docs =
    furo>=2020.11.19b18
    sphinx~=3.0
    sphinx-autodoc-typehints>=1.10.0
    Jinja2<3.1  # https://github.com/readthedocs/readthedocs.org/issues/9038

[flake8]
max-line-length = 129
max-complexity = 10
extend-ignore = E203

[mypy]
ignore_missing_imports = True
strict = True

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = pyproject-metadata

[coverage:html]
show_contexts = true
